
- GPR#2085: Add [end_of_function_label] to the interface of [Emit.fundecl].
  (Mark Shinwell)

- GPR#2086: Add [Available_filtering] pass.
  (Mark Shinwell)

- GPR#2087: Add human name, module path and arity fields variously throughout
  types in the backend used for transporting function information.  Populate
  human name and module path fields in [Closure].
  (Mark Shinwell)

### Bug fixes:

- MPR#7847, GPR#2019: Fix an infinite loop that could occur when the
  (Menhir-generated) parser encountered a syntax error in a certain
  specific state.
  (François Pottier, report by Stefan Muenzel,
  review by Frédéric Bour, Thomas Refis, Gabriel Scherer)

- GPR#1626: Do not allow recursive modules in `with module`
  (Leo White, review by Gabriel Radanne)

- MPR#7726, GPR#1676: Recursive modules, equi-recursive types and stack overflow
  (Jacques Garrigue, report by Jeremy Yallop, review by Leo White)

- MPR#7723, GPR#1698: Ensure `with module` and `with type` do not weaken
  module aliases.
  (Leo White, review by Gabriel Radanne and Jacques Garrigue)

- GPR#1719: fix Pervasives.LargeFile functions under Windows.
  (Alain Frisch)

- GPR#1739: ensure ocamltest waits for child processes to terminate on Windows.
  (David Allsopp, review by Sébastien Hinderer)

- MPR#7554, GPR#1751: Lambda.subst: also update debug event environments
  (Thomas Refis, review by Gabriel Scherer)

- MPR#7238, GPR#1825: in Unix.in_channel_of_descr and Unix.out_channel_of_descr,
  raise an error if the given file description is not suitable for
  character-oriented I/O, for example if it is a block device or a
  datagram socket.
  (Xavier Leroy, review by Jérémie Dimino and Perry E. Metzger)

- MPR#7799, GPR#1820: fix bug where Scanf.format_from_string could fail when
  the argument string contained characters that require escaping.
  (Gabriel Scherer and Nicolás Ojeda Bär, report by Guillaume Melquiond, review
  by Gabriel Scherer)
