@@ -111,6 +111,11 @@ type value_approximation =
 
 (* Preallocated globals *)
 
+type usymbol_provenance = {
+  original_idents : Ident.t list;
+  module_path : Path.t;
+}
+
 type uconstant_block_field =
   | Uconst_field_ref of string
   | Uconst_field_int of int
@@ -120,12 +125,14 @@ type preallocated_block = {
   exported : bool;
   tag : int;
   fields : uconstant_block_field option list;
+  provenance : usymbol_provenance option;
 }
 
 type preallocated_constant = {
   symbol : string;
   exported : bool;
   definition : ustructured_constant;
+  provenance : usymbol_provenance option;
 }
 
 (* Comparison functions for constants.  We must not use Stdlib.compare
